# reson

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  RUST_REWRITE_SPEC.md  TOOL_TYPES_IMPLEMENTATION.md  example.py  example_generator.py  example_tools.py  implementation_plan.md  implementation_plan_async_tests.md  implementation_plan_n1_fix.md  implementation_plan_nested_keys.md  implementation_plan_nested_preloads.md  implementation_plan_serialization.md  implementation_plan_sync_methods.md  migration-goal.md  migration-validation-note.md  native_tool_deserializable_implementation_plan.md  pyproject.toml  test_optional_schema.py  test_reasoning.py  test_reasoning_stream.py  test_reson_py.py  toolresult_example.py
durable/: Cargo.toml  README.md  SPEC.md
durable/src/: lib.rs
node-sandbox/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
node-sandbox/src/: lib.rs
reson-durable/: Cargo.toml  README.md  SPEC.md
reson-durable/src/: lib.rs
reson-mcp/: .gitignore  Cargo.toml  README.md
reson-mcp/examples/: client_agent.rs  client_websocket.rs  http_server.rs  simple_server.rs  websocket_server.rs
reson-mcp/src/: error.rs  lib.rs
reson-mcp/src/apps/: bridge.rs  mod.rs  resource.rs  types.rs
reson-mcp/src/client/: connection.rs  tools.rs
reson-mcp/src/server/: handler.rs
reson-mcp/src/transport/: mod.rs  websocket.rs
reson-mcp/tests/: apps_tests.rs  client_tests.rs  server_tests.rs
reson-py/: Cargo.toml  README.md  pyproject.toml
reson-py/python/reson/: __init__.py  deserializable.py
reson-py/python/reson/_types/: __init__.py
reson-py/python/reson/utils/: __init__.py  schema_generators.py
reson-py/src/: decorators.rs  errors.rs  lib.rs  runtime.rs  services.rs  stores.rs  types.rs  utils.rs
reson-rust/: Cargo.toml  DYNAMIC_TOOL_REGISTRY.md  INTEGRATION_TEST_SPEC.md  PYO3_SPEC.md  README.md
reson-rust/examples/: dynamic_tool_parsing.rs  run_sandbox_agent_demo.sh  run_sandbox_agent_tools_demo.sh  sandbox_agent_demo.rs  sandbox_agent_tools_demo.rs  simple_tools.rs  store_usage.rs  templating_example.rs  tool_call_chain.rs  tool_hydration.rs  video_upload.rs
reson-rust/plans/: ACCURATE_AUDIT.md  DYNAMIC_TOOL_REGISTRY.md  IMPLEMENTATION_AUDIT.md  PROVIDER_CONFIG_SPEC.md
reson-rust/reson-macros/: Cargo.toml
reson-rust/reson-macros/src/: lib.rs
reson-rust/src/: error.rs  lib.rs  parsers.rs  retry.rs  sandbox.rs  types.rs
reson-rust/src/mcp/: mod.rs
reson-rust/src/providers/: anthropic.rs  anthropic_streaming.rs  bedrock.rs  google.rs  google_anthropic.rs  mod.rs  openai.rs  openai_responses.rs  openai_responses_streaming.rs  openai_streaming.rs  openrouter.rs  openrouter_responses.rs  tracing_client.rs
reson-rust/src/runtime/: context.rs  decorators.rs  inference.rs  mod.rs
reson-rust/src/schema/: mod.rs
reson-rust/src/storage/: mod.rs  postgres_store.rs  redis_store.rs  store.rs
reson-rust/src/templating/: mod.rs
reson-rust/src/tools/: execution.rs  mod.rs
reson-rust/src/utils/: json_stream.rs  message_conversion.rs  mod.rs  sse.rs
reson-rust/tests/: image_input_live.rs  image_input_shapes.rs  integration_tests.rs  macro_tests.rs  mcp_bridge_tests.rs  sandbox_integration_smoke.rs  test_anthropic_client.rs  test_hydration.rs  test_native_tools.rs  test_native_tools_integration.rs  test_parallel_tools.rs  test_reasoning.rs  test_streaming.rs  test_tool_formats.rs  test_tracing_client.rs
reson-sandbox/crates/reson-sandbox/: Cargo.toml  build.rs
reson-sandbox/crates/reson-sandbox/src/: distributed.rs  (+4 more)
reson-sandbox/portproxy/: .gitignore  Cargo.toml  build.rs  build.sh
reson-sandbox/portproxy/src/: child_tracker.rs  cli.rs  daemon.rs  main.rs  port_forward.rs  process_group.rs  services.rs  system_env.rs
reson-sandbox/vmd/: Cargo.toml  build.rs
reson-sandbox/vmd/images/: Dockerfile.uv
reson-sandbox/vmd/src/: app.rs  config.rs  control_bus.rs  guest_exec_probe.rs  health_reconciler.rs  image.rs  lib.rs  partition.rs  public_ingress.rs  reconcile.rs  registry.rs
rust/: Cargo.toml  README.md
rust/examples/: dynamic_tool_parsing.rs  run_sandbox_agent_demo.sh  run_sandbox_agent_tools_demo.sh  sandbox_agent_demo.rs  sandbox_agent_tools_demo.rs  templating_example.rs  tool_call_chain.rs  tool_hydration.rs  video_upload.rs
rust/macros/: Cargo.toml
rust/macros/src/: lib.rs
rust/plans/: ACCURATE_AUDIT.md  DYNAMIC_TOOL_REGISTRY.md  IMPLEMENTATION_AUDIT.md  INTEGRATION_TEST_SPEC.md  PROVIDER_CONFIG_SPEC.md  PYO3_SPEC.md
rust/src/: error.rs  lib.rs  parsers.rs  retry.rs  sandbox.rs  types.rs
rust/src/mcp/: mod.rs
rust/src/providers/: anthropic.rs  anthropic_streaming.rs  bedrock.rs  google.rs  google_anthropic.rs  mod.rs  openai.rs  openai_codex_responses.rs  openai_responses.rs  openai_responses_streaming.rs  openai_streaming.rs  openrouter.rs  tracing_client.rs
rust/src/runtime/: decorators.rs  inference.rs  mod.rs
rust/src/schema/: introspect.rs  mod.rs  normalized.rs
rust/src/templating/: mod.rs
rust/src/tools/: mod.rs
rust/src/utils/: json_stream.rs  message_conversion.rs  mod.rs
rust/tests/: image_input_live.rs  image_input_shapes.rs  integration_tests.rs  macro_tests.rs  mcp_bridge_tests.rs  sandbox_integration_smoke.rs  test_hydration.rs  test_native_tools.rs  test_native_tools_integration.rs  test_parallel_tools.rs  test_reasoning.rs  test_streaming.rs  test_tool_formats.rs  test_tracing_client.rs
sandbox/crates/sandbox/: Cargo.toml  build.rs
ts/: Cargo.toml  README.md  index.d.ts  index.js  index.mjs  index.ts  native.d.ts  package-lock.json  package.json  vfs-gateway-server.d.ts  vfs-gateway-server.js  vfs-gateway-server.ts
ts/examples/: quickstart.mjs
ts/src/: error.rs  lib.rs  mcp.rs  messages.rs  runtime.rs  stream.rs  types.rs  vfs.rs
ts/test/: basic.test.cjs
vfs/: Cargo.toml  README.md
vfs/examples/: postgres_local_object_store.rs
vfs/migrations/postgres/: 001_chevalier_vfs_index.sql
vfs/src/: compaction.rs  gateway.rs  gcs_object_store.rs  local.rs  manifest.rs  object_storage.rs  object_store.rs  pack.rs  postgres_index.rs
(+429 files in other folders)
