[project]
name = "reson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reson/"]

[tool.hatch.version]
path = "reson/__init__.py"

[project.optional-dependencies]
dev = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=4.0.0",
]

[tool.hatch.envs.default]
dependencies = ["reson[dev]"]

[tool.hatch.envs.test]
dependencies = ["reson[dev]"]

[tool.mypy]
ignore_missing_imports = true

