[project]
name = "reson"
version = "0.1.0"
description = "Agents are just functions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gasp-py>=1.3.6",
  "openpipe-art>=0.3.13",
  "boto3>=1.34.0",
  "opentelemetry-sdk>=1.27.0",
  "httpx>=0.23.0,<1.0.0",
  "opentelemetry-instrumentation-httpx",
  "aioboto3>=13.0.0",
  "pydantic>=2.0.0",
  "psycopg[binary]>=3.0.0",
  "opentelemetry-instrumentation-psycopg",
  "psycopg-pool>=3.2.6",
  "lupa==2.2.0",
  "jsonpickle>=3.0.0",
  "redis>=5.0.0",
  "opentelemetry-api>=1.27.0",
  "google-cloud-aiplatform==1.69.0",
  "backoff>=2.2.0",
  "google-generativeai==0.8.3",
  "google-genai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reson/"]

[tool.hatch.version]
path = "reson/__init__.py"

[project.optional-dependencies]
dev = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=4.0.0",
]

[tool.hatch.envs.default]
dependencies = ["reson[dev]"]

[tool.hatch.envs.test]
dependencies = ["reson[dev]"]

[tool.mypy]
ignore_missing_imports = true
