[package]
name = "reson-durable"
version = "0.1.0"
edition = "2021"
authors = ["Reson Contributors"]
description = "Durable execution primitives for agentic runtimes"
license = "Apache-2.0"
repository = "https://github.com/iantbutler01/reson"
homepage = "https://github.com/iantbutler01/reson"
documentation = "https://docs.rs/reson-durable"
readme = "README.md"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

[lints.rust]
warnings = "deny"
