[package]
name = "reson-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for reson - Agents are just functions"
license = "ApacheV2"

[lib]
name = "reson"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings (version from maturin)
pyo3 = "0.23.3"

# Async runtime bridge
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Core reson library
reson-agentic = { path = "../reson-rust", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python <-> Rust serialization (must match pyo3 version)
pythonize = "0.23"

# Async streams
futures = "0.3"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Lazy static initialization
once_cell = "1"
