[workspace]
members = [".", "reson-macros"]
resolver = "2"

[package]
name = "reson-agentic"
version = "0.1.3"
edition = "2021"
authors = ["Reson Contributors"]
description = "Agents are just functions - production-grade LLM agent framework"
license = "MIT"
repository = "https://github.com/ianhundere/reson"
homepage = "https://github.com/ianhundere/reson"
documentation = "https://docs.rs/reson-agentic"
readme = "README.md"
keywords = ["llm", "ai", "agents", "gemini", "anthropic"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Proc macros
resonai-macros = { version = "0.1.1", path = "reson-macros" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# SSE parsing
eventsource-stream = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Utilities
bytes = "1.7"

# Optional: Storage backends (feature-gated)
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"], optional = true }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "json"], optional = true }

# Optional: AWS Bedrock
aws-config = { version = "1.5", optional = true }
aws-sdk-bedrockruntime = { version = "1.46", optional = true }

# Optional: Templating
minijinja = { version = "2.5", optional = true }

# Optional: OpenTelemetry
opentelemetry = { version = "0.24", optional = true }
opentelemetry_sdk = { version = "0.24", optional = true }

# Optional: Google Cloud ADC authentication
gcp_auth = { version = "0.12", optional = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"

[features]
default = []
full = ["storage", "bedrock", "templating", "telemetry", "google-adc"]
storage = ["redis", "sqlx"]
bedrock = ["aws-config", "aws-sdk-bedrockruntime"]
templating = ["minijinja"]
telemetry = ["opentelemetry", "opentelemetry_sdk"]
google-adc = ["gcp_auth"]
