[workspace]
members = [".", "reson-macros"]
resolver = "2"

[package]
name = "reson-agentic"
version = "0.4.1"
edition = "2021"
authors = ["Reson Contributors"]
description = "Agents are just functions - production-grade LLM agent framework"
license = "Apache-2.0"
repository = "https://github.com/iantbutler01/reson"
homepage = "https://github.com/iantbutler01/reson"
documentation = "https://docs.rs/reson-agentic"
readme = "README.md"
keywords = ["llm", "ai", "agents", "framework", "mcp"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Proc macros
resonai-macros = { version = "0.2.1" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# SSE parsing
eventsource-stream = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Utilities
bytes = "1.7"

# Optional: AWS Bedrock
aws-config = { version = "1.5", optional = true }
aws-sdk-bedrockruntime = { version = "1.46", optional = true }

# Optional: Templating
minijinja = { version = "2.5", optional = true }

# Optional: OpenTelemetry
opentelemetry = { version = "0.24", optional = true }
opentelemetry_sdk = { version = "0.24", optional = true }

# Optional: Google Cloud ADC authentication
gcp_auth = { version = "0.12", optional = true }

# Optional: MCP support
reson-mcp = { version = "0.1.0", path = "../reson-mcp", optional = true, default-features = false, features = ["client", "server"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"

[features]
default = []
full = ["bedrock", "templating", "telemetry", "google-adc", "mcp"]
bedrock = ["aws-config", "aws-sdk-bedrockruntime"]
templating = ["minijinja"]
telemetry = ["opentelemetry", "opentelemetry_sdk"]
google-adc = ["gcp_auth"]
mcp = ["dep:reson-mcp"]
mcp-apps = ["mcp", "reson-mcp/apps"]

[lints.rust]
warnings = "deny"
