[workspace]
members = [".", "macros"]
resolver = "2"

[package]
name = "chevalier"
version = "0.7.0"
edition = "2024"
authors = ["Chevalier Contributors"]
description = "Agents are just functions - production-grade LLM agent framework"
license = "Apache-2.0"
repository = "https://github.com/iantbutler01/chevalier"
homepage = "https://github.com/iantbutler01/chevalier"
documentation = "https://docs.rs/chevalier"
readme = "README.md"
keywords = ["llm", "ai", "agents", "framework", "mcp"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "chevalier"
path = "src/lib.rs"

[dependencies]
# Proc macros
chevalier-macros = { version = "0.2.1", path = "macros" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# SSE parsing
eventsource-stream = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Utilities
bytes = "1.7"

# Optional: AWS Bedrock
aws-config = { version = "1.5", optional = true }
aws-sdk-bedrockruntime = { version = "1.46", optional = true }

# Optional: Templating
minijinja = { version = "2.5", optional = true }

# Optional: OpenTelemetry
opentelemetry = { version = "0.24", optional = true }
opentelemetry_sdk = { version = "0.24", optional = true }

# Optional: Google Cloud ADC authentication
gcp_auth = { version = "0.12", optional = true }

# Optional: MCP support
chevalier-mcp = { version = "0.1.0", path = "../mcp", optional = true, default-features = false, features = ["client", "server"] }
chevalier-sandbox = { version = "0.1.0", path = "../sandbox/crates/sandbox", optional = true, default-features = false, features = ["client"] }
chevalier-vfs = { version = "0.1.0", path = "../vfs", optional = true, default-features = false }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"

[features]
default = []
full = ["bedrock", "templating", "telemetry", "google-adc", "mcp"]
bedrock = ["aws-config", "aws-sdk-bedrockruntime"]
templating = ["minijinja"]
telemetry = ["opentelemetry", "opentelemetry_sdk"]
google-adc = ["gcp_auth"]
mcp = ["dep:chevalier-mcp"]
mcp-apps = ["mcp", "chevalier-mcp/apps"]
sandbox = ["dep:chevalier-sandbox"]
sandbox-local = ["sandbox", "chevalier-sandbox/local"]
sandbox-distributed-control = ["sandbox", "chevalier-sandbox/distributed-control"]
sandbox-vfs-server = ["sandbox", "chevalier-sandbox/vfs-server"]
vfs = ["dep:chevalier-vfs"]

[[example]]
name = "sandbox_agent_demo"
required-features = ["sandbox-local"]

[[example]]
name = "sandbox_agent_tools_demo"
required-features = ["sandbox-local"]

[lints.rust]
warnings = "deny"
