[package]
name = "chevalier-ts"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Node-API (TypeScript) bindings for Chevalier — agents are just functions."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8", "async", "tokio_rt", "serde-json"] }
napi-derive = "3"

# Chevalier engine (core providers + Runtime + tools + types). vfs feature added in its phase.
chevalier-agentic = { path = "../rust", features = ["mcp"] }
# Standalone MCP client/server.
chevalier-mcp = { path = "../mcp", default-features = false, features = ["client", "server"] }
# VFS storage (local + gateway; gcs/postgres/object-backed are a follow-up).
chevalier-vfs = { path = "../vfs", default-features = false, features = ["tokio", "gateway"] }

serde = "1"
serde_json = "1"
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
