[package]
name = "chevalier-vfs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Optimized VFS storage primitives and interfaces for Chevalier"

[dependencies]
async-trait = "0.1.89"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"], optional = true }
reqwest = { version = "0.13.2", features = ["blocking", "form", "json", "query"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"], optional = true }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time"], optional = true }
tracing = { version = "0.1", optional = true }
urlencoding = { version = "2.1.3", optional = true }
uuid = { version = "1.18.1", features = ["v4"] }
zstd = "0.13"

[features]
default = []
tokio = ["dep:tokio"]
tracing = ["dep:tracing"]
gateway = ["dep:reqwest", "dep:serde_json"]
gcs = [
    "dep:jsonwebtoken",
    "dep:reqwest",
    "dep:serde_json",
    "tokio",
    "tracing",
    "dep:urlencoding",
]
postgres = ["dep:sqlx"]

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[lints.rust]
warnings = "deny"
