[package]
name = "resonai-macros"
version = "0.1.3"
edition = "2021"
authors = ["Reson Contributors"]
description = "Proc macros for the resonai LLM agent framework"
license = "Apache-2.0"
repository = "https://github.com/iantbutler01/reson"
documentation = "https://docs.rs/resonai-macros"
keywords = ["llm", "ai", "agents", "macros"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
