# @dive-file: Cargo manifest for vmd runtime daemon, library modules, and operator binaries.
# @dive-rel: Builds vmd/src/lib.rs plus vmd/vmdctl/mqctl binaries used by gate and integration harnesses.
# @dive-rel: Declares control-plane, virtualization, and protobuf dependencies for VM lifecycle execution.
[package]
name = "vmd"
version = "0.1.0"
edition = "2024"

[lib]
name = "vmd_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
async-nats = "0.39.0"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
etcd-client = "0.14.1"
futures = "0.3.31"
dirs = "6.0.0"
libc = "0.2.177"
prost = "0.14.1"
prost-types = "0.14.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "process"] }
tokio-stream = "0.1.17"
tonic = { version = "0.14.2", features = ["transport", "tls-ring"] }
tonic-health = "0.14.2"
tonic-prost = "0.14.2"
tower = { version = "0.5.2", features = ["limit", "timeout"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4", "v7"] }
reqwest = { version = "0.12.5", features = ["rustls-tls", "stream"] }
http = "1.1.0"
indicatif = "0.17.9"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.2"
