# @dive-file: Cargo manifest for vmd runtime daemon, library modules, and operator binaries.
# @dive-rel: Builds vmd/src/lib.rs plus vmd/vmdctl/mqctl binaries used by gate and integration harnesses.
# @dive-rel: Declares control-plane, virtualization, and protobuf dependencies for VM lifecycle execution.
[package]
name = "vmd"
version = "0.1.0"
edition = "2024"

[lib]
name = "vmd_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
async-nats = "0.39.0"
async-trait = "0.1.89"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
etcd-client = "0.14.1"
futures = "0.3.31"
dirs = "6.0.0"
fuser = { version = "0.17.0", features = ["macos-no-mount"] }
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
libc = "0.2.177"
prost = "0.14.1"
prost-types = "0.14.1"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.17"
tonic = { version = "0.14.2", features = ["transport", "tls-ring"] }
tonic-health = "0.14.2"
tonic-prost = "0.14.2"
tower = { version = "0.5.2", features = ["limit", "timeout"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }
reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "stream"] }
http = "1.1.0"
indicatif = "0.17.9"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.2"
