[package]
name = "chevalier-macros"
version = "0.2.1"
edition = "2024"
authors = ["Chevalier Contributors"]
description = "Proc macros for the chevalier LLM agent framework"
license = "Apache-2.0"
repository = "https://github.com/iantbutler01/chevalier"
documentation = "https://docs.rs/chevalier-macros"
keywords = ["llm", "ai", "agents", "macros"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
