[package]
name = "reson-sandbox"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "High-level Rust sandbox facade for Reson"

[features]
default = ["distributed-control"]
distributed-control = ["dep:async-nats", "dep:etcd-client", "dep:serde", "dep:serde_json"]

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
prost = "0.14.1"
prost-types = "0.14.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process", "sync", "time", "net"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.14.2", features = ["transport", "tls-ring"] }
tonic-prost = "0.14.2"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }
async-nats = { version = "0.39.0", optional = true }
etcd-client = { version = "0.14.1", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.2"

[dev-dependencies]
tempfile = "3.23.0"
