# @dive-file: Cargo manifest for the public chevalier-sandbox facade crate and distributed-control feature surface.
# @dive-rel: Builds crates/sandbox/src/lib.rs and distributed adapter modules consumed by chevalier-agentic.
# @dive-rel: Defines dependency boundaries for control-plane transports, protobufs, and runtime async tooling.
[package]
name = "chevalier-sandbox"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "High-level Rust sandbox facade for Chevalier"

[features]
default = ["local"]
client = []
host = ["tokio/process"]
local = ["client", "host"]
distributed-control = ["client", "dep:async-nats", "dep:etcd-client", "dep:serde_json"]
vfs-server = ["client", "dep:async-trait", "dep:axum"]

[dependencies]
async-trait = { version = "0.1.89", optional = true }
axum = { version = "0.8.6", optional = true }
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.14.2", features = ["transport", "tls-ring"] }
tonic-prost = "0.14.2"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
async-nats = { version = "0.39.0", optional = true }
etcd-client = { version = "0.14.1", optional = true }
serde_json = { version = "1.0.145", optional = true }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.2"

[dev-dependencies]
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
